2008-01-28  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	Compare individual parts of the res and protocol info rather than
	using glob pattern matching.

2008-01-28  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:

	Set the volume-vscale accordingly whenever the volume of the currently
	selected renderer or the renderer selection itself, changes.

2008-01-27  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/gui.c:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	- Remove some functions that got copied by mistake.
	- Keep a reference to all renderer control widgets.

2008-01-27  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Keep track of the Master volume of each MediaRenderer.

2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Keep the RenderingControl proxy in renderer combo as well.

2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:
	* src/av-cp/renderer-controls.c:

	Implement next/prev controls (locally).

2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	- Item selection sets the URI on the renderer if it's in
	  PLAYING/PAUSE state.
	- Check if we have a hashtable before unref'ing it.

2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Make the AV URI setting function more:
	- generic (Takes Callback to call after URI is set)
	- public.

	* src/av-cp/renderer-controls.h:
	* src/av-cp/Makefile.am:

	Add the forgotten renderer-controls.h file to build and VCS.

2008-01-25  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:
	* src/av-cp/renderer-controls.c:

	get_selected_item() returns the URI instead of resource_hash.

2008-01-24  Zeeshan Ali Khattak  <zeenix@gmail.com>
